<resources>
    <string name="app_name">Залишки ItaTools Україна</string>
    <string name="title_activity_main">Залишки ItaTools Україна</string>
    <string name="update_info_data_from">Дані від: [%s]</string>
    <string name="update_info_last_check">Остання перевірка [%s %s]</string>
    <string name="update_info_min">хв.</string>
    <string name="update_info_hour">год.</string>
    <string name="update_info_default">Дані ще не оновлювались.</string>
    <string name="edit_article_hint">Результат після 4 знака артикулу …</string>
    <string name="title_activity_settings">Налаштування</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Settings for Sorting Data & Sync -->
    <string name="pref_header_sorting">Сортування списку</string>

    <string name="pref_key_sorting">sorting_by_count_article</string>
    <string name="pref_title_sorting">Сортування списку</string>
    <string name="pref_sorting_summaryOff">Сортування по артикулу</string>
    <string name="pref_sorting_summaryOn">Сортування по кількості та артикулу</string>


    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Дані &amp; синхронізація</string>


    <string name="pref_title_sync_frequency">Частота оновлення данних</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 хвилин</item>
        <item>30 хвилин</item>
        <item>1 година</item>
        <item>3 година</item>
        <item>6 година</item>
        <item>Ніколи</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_url_server_sync">Адреса сервера оновлення</string>
    <string name="pref_url_server_sync_default">78.47.192.109</string>

    <string name="pref_server_login">Користувач сервера оновлення</string>
    <string name="pref_server_login_default">Користувач не заповнений</string>

    <string name="pref_server_password">Пароль користувача сервера оновлення</string>
    <string name="menu_item_title_update">Оновити дані</string>

</resources>
