<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <ListPreference
        android:defaultValue="180"
        android:entries="@array/pref_sync_frequency_titles"
        android:entryValues="@array/pref_sync_frequency_values"
        android:key="sync_frequency"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_sync_frequency" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_url_server_sync_default"
        android:inputType="textUri"
        android:key="url_server_sync"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_url_server_sync" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_server_login_default"
        android:inputType="text"
        android:key="server_login_sync"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_server_login" />

    <EditTextPreference
        android:capitalize="words"
        android:inputType="textPassword"
        android:key="server_password_sync"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_server_password" />

</PreferenceScreen>
